# aranet

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  audit.toml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/homebrew/: aranet-gui.rb.template  aranet.rb.template
.github/workflows/: ci.yml  deploy-site.yml  homebrew.yml  release.yml  screenshots.yml
assets/: aranet-icon.icns
assets/icon/: aranet-icon.icns
crates/aranet-cli/: Cargo.toml  README.md
crates/aranet-cli/src/: cli.rs  config.rs  format.rs  lib.rs  main.rs  style.rs  tui.rs  util.rs
crates/aranet-cli/src/commands/: alias.rs  cache.rs  doctor.rs  history.rs  info.rs  mod.rs  read.rs  report.rs  scan.rs  server.rs  set.rs  status.rs  sync.rs  watch.rs
crates/aranet-cli/src/gui/: app.rs  components.rs  demo.rs  export.rs  helpers.rs  menu.rs  mod.rs  readings.rs  theme.rs  tray.rs  types.rs  worker.rs
crates/aranet-cli/src/gui/panels/: alerts.rs  app_settings.rs  comparison.rs  device_detail.rs  device_list.rs  history.rs  mod.rs  service.rs  settings.rs
crates/aranet-cli/src/tui/: app.rs  errors.rs  input.rs  messages.rs  mod.rs  worker.rs
crates/aranet-cli/src/tui/ui/: colors.rs  dashboard.rs  history.rs  mod.rs  overlays.rs  service.rs  settings.rs  theme.rs  widgets.rs
crates/aranet-cli/tests/: cli_integration.rs
crates/aranet-core/: Cargo.toml  README.md
crates/aranet-core/examples/: discover_services.rs  download_history.rs  read_sensor.rs  scan_devices.rs
crates/aranet-core/proptest-regressions/: advertisement.txt
crates/aranet-core/src/: advertisement.rs  bluez_agent.rs  commands.rs  device.rs  diagnostics.rs  error.rs  events.rs  guard.rs  history.rs  lib.rs  manager.rs  messages.rs  metrics.rs  mock.rs  passive.rs  platform.rs  readings.rs  reconnect.rs  retry.rs  scan.rs  service_client.rs  settings.rs  streaming.rs  thresholds.rs  traits.rs  util.rs  validation.rs
crates/aranet-core/tests/: hardware_tests.rs  integration.rs
crates/aranet-gui/: Cargo.toml  README.md  entitlements.plist
crates/aranet-gui/src/: lib.rs  main.rs
crates/aranet-service/: Cargo.toml  README.md
crates/aranet-service/src/: api.rs  collector.rs  config.rs  dashboard.rs  influxdb.rs  lib.rs  main.rs  mdns.rs  middleware.rs  mqtt.rs  prometheus.rs  service.rs  state.rs  webhook.rs  ws.rs
crates/aranet-service/tests/: api_integration.rs
crates/aranet-store/: Cargo.toml  README.md
crates/aranet-store/src/: error.rs  lib.rs  models.rs  queries.rs  schema.rs  store.rs
crates/aranet-tui/: Cargo.toml  README.md
crates/aranet-tui/src/: lib.rs  main.rs
crates/aranet-types/: Cargo.toml  README.md
crates/aranet-types/src/: error.rs  lib.rs  types.rs  uuid.rs
crates/aranet-wasm/: Cargo.toml  README.md
crates/aranet-wasm/src/: lib.rs
dashboards/: aranet-grafana.json
distribution/: README.md
distribution/launchd/: dev.rye.aranet.plist
distribution/systemd/: aranet.service
docker/: Dockerfile  README.md  docker-compose.yml  prometheus.yml  server.toml  server.toml.example
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: datasources.yml
docs/: ARCHITECTURE.md  PROTOCOL.md  UUIDs.md
grafana/: aranet-dashboard.json
scripts/: generate-icons.sh  generate-screenshots.sh  hardware-test.sh
scripts/tapes/: cli-history.tape  cli-read.tape  cli-scan.tape  tui-demo.tape
tests/: hardware-test.toml
website/: astro.config.mjs  package-lock.json  package.json
website/src/: site-config.mjs
website/src/content/docs/: index.mdx
website/src/content/docs/docs/: changelog.mdx  downloads.mdx  getting-started.mdx  installation.mdx  quick-start.mdx  roadmap.mdx  rust-docs.mdx  troubleshooting.mdx
website/src/content/docs/docs/cli/: commands.mdx  overview.mdx
website/src/content/docs/docs/protocol/: data-parsing.mdx  overview.mdx  uuids.mdx
website/src/content/docs/docs/service/: deployment.mdx  home-assistant.mdx  security.mdx  websocket-api.mdx
website/src/styles/: custom.css
