[workspace]
members = [
    "crates/aranet-types",
    "crates/aranet-core",
    "crates/aranet-store",
    "crates/aranet-cli",
    "crates/aranet-tui",
    "crates/aranet-gui",
    "crates/aranet-wasm",
]
# Default members exclude GUI (which is a placeholder) and WASM (which requires special tooling)
# Build GUI explicitly with: cargo build -p aranet-gui
# Build WASM explicitly with: cargo build -p aranet-wasm --target wasm32-unknown-unknown
default-members = [
    "crates/aranet-types",
    "crates/aranet-core",
    "crates/aranet-store",
    "crates/aranet-cli",
    "crates/aranet-tui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/cameronrye/aranet"
rust-version = "1.90"

[workspace.dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
egui = "0.33"
eframe = "0.33"
futures = "0.3"
async-trait = "0.1"
rand = "0.9"
tokio-util = { version = "0.7", features = ["rt"] }

[workspace.metadata.features]
default = ["cli"]
cli = []
tui = []
gui = []
wasm = []

