[workspace]
members = [
    "crates/aranet-types",
    "crates/aranet-core",
    "crates/aranet-store",
    "crates/aranet-service",
    "crates/aranet-cli",
    "crates/aranet-tui",
    "crates/aranet-gui",
    "crates/aranet-wasm",
]
# Default members exclude WASM (which requires special tooling)
# Build WASM explicitly with: cargo build -p aranet-wasm --target wasm32-unknown-unknown
default-members = [
    "crates/aranet-types",
    "crates/aranet-core",
    "crates/aranet-store",
    "crates/aranet-service",
    "crates/aranet-cli",
    "crates/aranet-tui",
    "crates/aranet-gui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/cameronrye/aranet"
rust-version = "1.90"

[workspace.dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
egui = "0.33"
eframe = "0.33"
futures = "0.3"
async-trait = "0.1"
rand = "0.9"
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.9"

[workspace.metadata.features]
default = ["cli"]
cli = []
tui = []
gui = []
wasm = []

# Build profile for cargo-dist releases
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Conditions to К update this are the same
# having issues/incremental improvements released.)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build for
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to auto-include files like README/LICENSE
auto-includes = true
# Skip aranet-service in distributions (it's a separate deployment)
# Only distribute aranet (CLI) and aranet-tui binaries
allow-dirty = ["ci"]

# Homebrew tap configuration
[workspace.metadata.dist.homebrew]
# The GitHub repository to push the Homebrew formula to
tap = "cameronrye/homebrew-aranet"
# The formula name (defaults to package name)
formula = "aranet"

