[package]
name = "aranet-cli"
version = "0.1.8"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for Aranet environmental sensors"
readme = "README.md"
keywords = ["aranet", "ble", "bluetooth", "sensors", "cli"]
categories = ["command-line-utilities", "hardware-support"]

[[bin]]
name = "aranet"
path = "src/main.rs"

[features]
default = ["cli", "tui"]
# CLI feature - enables command-line interface with subcommands
cli = ["dep:clap", "dep:clap_complete", "dep:dialoguer", "dep:indicatif", "dep:tabled"]
# TUI feature - enables terminal user interface dashboard
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
aranet-core = { version = "0.1.8", path = "../aranet-core" }
aranet-store = { version = "0.1.8", path = "../aranet-store" }
aranet-types = { version = "0.1.8", path = "../aranet-types" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs = "6.0.0"
toml.workspace = true
futures.workspace = true
owo-colors = "4"
terminal_size = "0.4"
human-panic = "2.0.6"
chrono = "0.4.43"

# CLI-only dependencies (optional)
clap = { workspace = true, features = ["env"], optional = true }
clap_complete = { version = "4", optional = true }
dialoguer = { version = "0.12.0", optional = true }
indicatif = { version = "0.18.3", optional = true }
tabled = { version = "0.20.0", optional = true, features = ["ansi"] }

# TUI-only dependencies (optional)
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
btleplug = { workspace = true }
uuid = { workspace = true }
