[package]
name = "aranet-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core BLE library for Aranet environmental sensors"

[dependencies]
aranet-types = { path = "../aranet-types" }
btleplug.workspace = true
tokio.workspace = true
thiserror.workspace = true
bytes.workspace = true
uuid.workspace = true
time.workspace = true
tracing.workspace = true
serde.workspace = true
futures.workspace = true
async-trait.workspace = true
rand.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
serde_json.workspace = true
tracing-subscriber.workspace = true

[[example]]
name = "scan_devices"
path = "examples/scan_devices.rs"

[[example]]
name = "read_sensor"
path = "examples/read_sensor.rs"

[[example]]
name = "download_history"
path = "examples/download_history.rs"

