[package]
name = "aranet-gui"
version = "0.1.12"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Native desktop GUI for Aranet environmental sensors"

[lib]
name = "aranet_gui"
path = "src/lib.rs"

[[bin]]
name = "aranet-gui"
path = "src/main.rs"

# This is a thin wrapper around aranet-cli's GUI functionality.
# The actual GUI implementation lives in aranet-cli under the "gui" feature.
[dependencies]
aranet-cli = { version = "0.1.12", path = "../aranet-cli", default-features = false, features = ["gui"] }
anyhow.workspace = true
clap.workspace = true

# cargo-dist configuration - include in releases
[package.metadata.dist]
dist = true

# cargo-bundle configuration for native app bundles
[package.metadata.bundle]
# Human-readable name for the application
name = "Aranet"
# Bundle identifier (reverse DNS notation)
identifier = "dev.rye.aranet"
# Path to the icon file (relative to Cargo.toml)
icon = ["../../assets/aranet-icon.png", "../../assets/aranet-icon.icns"]
# Application version (uses package version)
version = "0.1.12"
# Short description
short_description = "Monitor Aranet environmental sensors"
# Long description
long_description = """
Aranet is a native desktop application for monitoring Aranet environmental sensors
including Aranet4 (CO2), Aranet2 (temperature/humidity), AranetRn+ (radon),
and Aranet Radiation sensors via Bluetooth Low Energy.

Features:
- Real-time sensor readings with color-coded CO2 levels
- Historical data charts and export
- Device settings configuration
- Multi-device support
- System tray with quick access
"""
# Copyright notice
copyright = "Copyright (c) 2024-2026 Cameron Rye"
# Application category (macOS)
category = "public.app-category.utilities"
# Resources to bundle (relative to Cargo.toml)
resources = ["../../assets/aranet-icon.png"]

# macOS-specific settings
[package.metadata.bundle.macos]
# Minimum macOS version
minimum_system_version = "11.0"
# Code signing identity (set via environment variable in CI)
# signing_identity = "Developer ID Application: ..."
# Entitlements file for hardened runtime (Bluetooth access, etc.)
entitlements = "entitlements.plist"
# High resolution capable
high_resolution = true
# Info.plist values for privacy permissions
info_plist = { NSBluetoothAlwaysUsageDescription = "Aranet uses Bluetooth to discover and connect to your Aranet environmental sensors.", NSBluetoothPeripheralUsageDescription = "Aranet uses Bluetooth to discover and connect to your Aranet environmental sensors." }

# Windows-specific settings
[package.metadata.bundle.windows]
# Windows subsystem (windows = no console, console = with console)
subsystem = "windows"
