[package]
name = "aranet-service"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Background collector and HTTP REST API for Aranet sensors"
keywords = ["aranet", "api", "rest", "service", "sensors"]
categories = ["web-programming::http-server", "network-programming"]
include = ["src/**/*", "Cargo.toml", "README.md", "assets/**/*"]

[[bin]]
name = "aranet-service"
path = "src/main.rs"

# Exclude from cargo-dist releases (deployed separately)
[package.metadata.dist]
dist = false

[features]
default = []
prometheus = []
mqtt = ["dep:rumqttc"]
notifications = ["dep:notify-rust"]
full = ["prometheus", "mqtt", "notifications"]

[dependencies]
aranet-core = { version = "0.2.0", path = "../aranet-core" }
aranet-store = { version = "0.2.0", path = "../aranet-store" }
aranet-types = { version = "0.2.0", path = "../aranet-types" }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# CLI
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
time.workspace = true

# Config paths
dirs = "6"
service-manager = "0.10.0"

# MQTT support (optional)
rumqttc = { version = "0.25.1", optional = true, default-features = false, features = ["use-native-tls"] }

# HTTP client for webhooks, InfluxDB, and Prometheus push gateway
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Desktop notifications (optional)
notify-rust = { version = "4", optional = true }

# Constant-time comparison for API key authentication
subtle = "2"

# mDNS service discovery
mdns-sd = "0.11"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1.0"
