[package]
name = "aranet-store"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local data persistence for Aranet sensor readings"
readme = "README.md"
keywords = ["aranet", "storage", "sqlite", "sensors", "database"]
categories = ["database", "caching"]

[dependencies]
aranet-types = { version = "0.1.7", path = "../aranet-types" }
rusqlite = { version = "0.33", features = ["bundled", "time"] }
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs = "6"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"

