[package]
name = "aranet-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Terminal UI dashboard for Aranet environmental sensors"

[[bin]]
name = "aranet-tui"
path = "src/main.rs"

[dependencies]
aranet-core = { version = "0.1", path = "../aranet-core" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
ratatui.workspace = true
crossterm.workspace = true
