[package]
name = "aranet-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Terminal UI dashboard for Aranet environmental sensors (standalone binary)"

[[bin]]
name = "aranet-tui"
path = "src/main.rs"

[dependencies]
# Use aranet-cli with only the tui feature (no cli dependencies)
aranet-cli = { version = "0.1.5", path = "../aranet-cli", default-features = false, features = ["tui"] }
anyhow.workspace = true
tokio.workspace = true
