[package]
name = "aranet-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Platform-agnostic types for Aranet environmental sensors"

[dependencies]
serde.workspace = true
thiserror.workspace = true
bytes.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true

