[package]
name = "aranet-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WebAssembly module for Aranet sensors via Web Bluetooth"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aranet-types = { version = "0.1", path = "../aranet-types" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
